# raylibgl-car-hw

./: .gitignore  CMakeLists.txt  README.md  car-parts.md
src/: main.cpp
src/app/: Application.cpp  Application.hpp  CameraControls.cpp  CameraControls.hpp  DebugControls.cpp  DebugControls.hpp  TrackballCamera.cpp  TrackballCamera.hpp
src/model/: Primitives.cpp  Primitives.hpp  Scooby-van.cpp  Scooby-van.hpp
